cargo-features = ["edition2021"]

[package]
name = "rocket-versioning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", default-features = false, features = [] }
semver = "1.0"
