cargo-features = ["edition2021"]

[package]
name = "rocket-versioning"
authors = [ "songww" ]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["api", "rocket", "versioning", "version"]
categories = ["web-programming", "web-programming::http-server"]
repository = "https://github.com/songww/rocket-versioning"
description = "api versioning for rocket web applications"
documentation = "https://docs.rs/rocket-versioning"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", default-features = false, features = [] }
semver = "1.0"
